# platform-system-media

./: Makefile.am  configure.ac
alsa_utils/: alsa_device_profile.c
audio/include/: Makefile.am
audio/include/system/: audio.h  sound_trigger.h
audio_route/: Makefile.am  audio_route.c
audio_utils/: Makefile.am  format.c  primitives.c
audio_utils/include/audio_utils/: primitives.h
camera/src/: camera_metadata.c
mca/filterpacks/videoproc/java/: BackDropperFilter.java
